test/parse/func/bad-local-binding.txt
;;; ERROR: 1
(module (func (local $foo $bar)))
(;; STDERR ;;;
out/test/parse/func/bad-local-binding.txt:2:27: error: unexpected token "$bar", expected i32, i64, f32, f64 or v128.
(module (func (local $foo $bar)))
                          ^^^^
;;; STDERR ;;)
